--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,69 @@
     margin: 0;
     padding: 0;
 }
+
+body{
+    background-color: rgb(26, 29, 41);
+}
+
+.wrapper{
+    margin: 0 auto;
+    width: 80%;
+}
+
+.studios{
+    height: 100vh;
+
+    display: flex; 
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 2rem;
+}
+
+.studio{
+    position: relative;
+    width: 220px;
+    height: auto;
+
+    background: linear-gradient(rgb(48, 50, 62), rgb(30, 31, 42));
+    box-shadow: rgb(0 0 0 / 69%) 0px 26px 30px -10px, rgb(0 0 0 / 73%) 0px 16px 10px -10px;
+    border-radius: 4px;
+    border: 3px solid rgb(65, 68, 83);
+    cursor: pointer;
+    transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s !important;
+}
+
+.studio img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.studio video{
+    display: none;
+}
+
+.studio:hover{
+    transform: scale(1.1);
+    border: 3px solid white;
+}
+
+.studio:hover img{
+    display: block;
+    position: inherit;
+    z-index: 2;
+}
+
+.studio:hover video{
+    display: block;
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    top: 0;
+    right: 0;
+    bottom: 0; 
+    left: 0;
+}
